--- a/app/src/main/res/drawable/diary_bg_shape.xml
+++ b/app/src/main/res/drawable/diary_bg_shape.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#fff" />
+    <solid android:color="#1A191F" />
     <corners
         android:bottomLeftRadius="6dp"
         android:bottomRightRadius="6dp" />
