--- a/app/src/main/res/drawable/talk_bg_shape.xml
+++ b/app/src/main/res/drawable/talk_bg_shape.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#f7f7f7" />
+    <solid android:color="#bbb" />
     <corners android:radius="8px" />
     <padding
         android:bottom="3dp"
