--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -5,7 +5,16 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#0e0e10"
     tools:context=".ui.add.AddActivity">
+
+    <include
+        android:id="@+id/top_nav"
+        layout="@layout/add_top_navigation_bar_layout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:minHeight="?android:attr/actionBarSize" />
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/pic_rv"
@@ -14,7 +23,7 @@
         android:layout_marginTop="12dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/top_nav" />
 
     <EditText
         android:id="@+id/title_et"
@@ -28,7 +37,8 @@
         android:maxLength="20"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
-        android:textColor="#222"
+        android:textColor="#fff"
+        android:textColorHint="#bbb"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -39,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="20"
-        android:textColor="#999"
+        android:textColor="#bbb"
         android:textSize="14sp"
         app:layout_constraintRight_toRightOf="@id/title_et"
         app:layout_constraintTop_toTopOf="@id/title_et" />
@@ -58,6 +68,7 @@
         android:lines="5"
         android:scrollbars="vertical"
         android:textColor="#555"
+        android:textColorHint="#bbb"
         android:textSize="14sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
