--- a/app/src/main/res/layout/talk_category_item_layout.xml
+++ b/app/src/main/res/layout/talk_category_item_layout.xml
@@ -1,15 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_gravity="center_vertical"
+    android:gravity="center_vertical">
 
     <TextView
         android:id="@+id/category_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:background="@drawable/talk_bg_shape"
+        android:gravity="center_vertical"
         android:text="衣物种类"
         android:textColor="#444"
         android:textSize="16sp" />
+
+    <ImageView
+        android:id="@+id/add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:padding="6dp"
+        android:src="@drawable/capa_icon_add_more_topic_black_14_night" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
