--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -81,7 +81,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/talk_bg_shape"
         android:text="# 话题"
-        android:textColor="#5a5a5a"
+        android:textColor="#fff"
         android:textSize="12sp"
         app:layout_constraintLeft_toLeftOf="@id/content_et"
         app:layout_constraintTop_toBottomOf="@id/content_et" />
