--- a/app/src/main/res/layout/talk_category_item_layout.xml
+++ b/app/src/main/res/layout/talk_category_item_layout.xml
@@ -13,7 +13,7 @@
         android:background="@drawable/talk_bg_shape"
         android:gravity="center_vertical"
         android:text="衣物种类"
-        android:textColor="#444"
+        android:textColor="#fff"
         android:textSize="16sp" />
 
     <ImageView
