--- a/app/src/main/res/layout/detail_top_navigation_bar_layout.xml
+++ b/app/src/main/res/layout/detail_top_navigation_bar_layout.xml
@@ -15,45 +15,21 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/head"
-        android:layout_width="42dp"
-        android:layout_height="42dp"
-        android:layout_marginLeft="12dp"
-        android:src="@drawable/capa_demo_filter_4"
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:textColor="#fff"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/left_iv"
+        app:layout_constraintRight_toLeftOf="@id/edit"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tv1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:text="美惠miho"
-        android:textColor="#aaa"
-        android:textSize="14sp"
-        app:layout_constraintLeft_toRightOf="@id/head"
-        app:layout_constraintTop_toTopOf="@id/head" />
-
-    <ImageView
-        android:id="@+id/location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/xhs_theme_icon_location_grey_13_night"
-        app:layout_constraintBottom_toBottomOf="@id/tv2"
-        app:layout_constraintLeft_toLeftOf="@id/tv1"
-        app:layout_constraintTop_toTopOf="@id/tv2" />
-
-    <TextView
-        android:id="@+id/tv2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="苏州"
-        android:textColor="#aaa"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@id/head"
-        app:layout_constraintLeft_toRightOf="@id/location" />
 
     <ImageView
         android:id="@+id/edit"
